Fixed navbar spacing with grid

--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -12,7 +12,7 @@
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 0.6fr auto auto;
+    grid-template-rows: 1fr 0.25fr auto auto;
     gap: 0px 0px;
     grid-auto-flow: row;
 }
@@ -73,15 +73,14 @@ nav {
     width: 100%;
     background-color: var(--grey);
     grid-area: 2/1/3/span 12;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto;
+    display: flex;
+    flex-flow: row;
     align-items: center;
-    justify-content: center;
+    ;
 }
 
 nav ul {
-    grid-area: 1/3/span 1/ 11;
+    margin-left: 15rem;
 }
 
 nav a {
@@ -156,46 +155,12 @@ footer img {
 
 main {
     grid-area: 3/3/4/11;
-    /* margin: 2rem; */
+    margin: 2rem;
 }
 
 main h2 {
     font-family: serif;
     color: var(--blue);
     font-size: 2rem;
-    margin: 2rem 0;
-}
-
-.blog-article {
-    display: flex;
-    flex-flow: row;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 5rem 0;
-}
-
-.blog-article img {
-    max-width: 100%;
-}
-
-.blog-article h3 {
-    font-family: serif;
-    color: var(--blue);
-    font-size: 1.5rem;
-}
-
-.blog-article p {
-    font-family: sans-serif;
-    font-size: 1.1rem;
-    line-height: 1.5rem;
-    margin: 1rem 0;
-}
-
-.blog-article article {
-    width: 55%;
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: space-around;
-    align-items: flex-start;
-    margin: 0 3rem;
+    margin: 2rem;
 }
