--- a/styles/dogs.css
+++ b/styles/dogs.css
@@ -73,14 +73,15 @@ nav {
     width: 100%;
     background-color: var(--grey);
     grid-area: 2/1/3/span 12;
-    display: flex;
-    flex-flow: row;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto;
     align-items: center;
-    ;
+    justify-content: center;
 }
 
 nav ul {
-    margin-left: 15rem;
+    grid-area: 1/3/span 1/ 11;
 }
 
 nav a {
@@ -167,7 +168,7 @@ main h2 {
     color: var(--blue);
     font-size: 2rem;
     align-self: flex-start;
-    margin: 1rem 3rem;
+    margin: 1rem 0;
 }
 
 .dog-grid {
@@ -179,7 +180,7 @@ main h2 {
 
 .dog-container {
     width: 18%;
-    margin: 2rem 1.5rem;
+    margin: 2rem 1rem;
 }
 
 .dog-info {
