--- a/styles/index.css
+++ b/styles/index.css
@@ -73,14 +73,15 @@ nav {
     width: 100%;
     background-color: var(--grey);
     grid-area: 2/1/3/span 12;
-    display: flex;
-    flex-flow: row;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto;
     align-items: center;
-    ;
+    justify-content: center;
 }
 
 nav ul {
-    margin-left: 15rem;
+    grid-area: 1/3/span 1/ 11;
 }
 
 nav a {
@@ -159,7 +160,7 @@ main {
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
-    margin: 1rem 2rem;
+    margin: 1rem 0;
 }
 
 main article {
@@ -202,7 +203,7 @@ main p {
 
 .dog-container {
     width: 18%;
-    margin: 2rem 1.5rem;
+    margin: 2rem 1rem;
 }
 
 .dog-info {
